app/scss/_global/_responsive.scss
// Provisional fix to sections not responsive yet
	#not-responsive{
		position: fixed;
		display: table;
		width: 100%;
		height: 100%;
		top: 0; left: 0;
		text-align: center;
		background-color: #fff;

		h1{
			position: relative;
			display: table-cell;
			vertical-align: middle;
		}
	}
	@media screen and (min-width: 1200px){
		#not-responsive{
			display: none;
		}
	}
	@media screen and (max-width: 1199px){
		#mbrtWrapper{
			display: none;
		}
	}


// Desktop 1920x1080 Resize
@media screen and (max-width: 1849px){
	#fullWrapper{
		#mbrtWrapper{

			// Contact Section
			.contactSection{
				.contactLetter{
					height: 390px;
					.topBox{
						height: 22.4%;

						.contactTitle{
							h1{
								height: 70px;
								font-size: 62px;
							}
						}
					}

					.bottomBox{
						.contactColumns{
							.indexRow{
								height: 14%;

								h5{
									font-size: 33.2px;
								}
							}

							.firstRow{
								.innerHeadRow{
									font-size: 24px;
								}

								.innerFootRow{
									font-size: 19.1px;
								}
							}

							.secondRow{
								font-size: 19.1px;
							}
						}
					}
				}
			}

			// Intro Section
			.introSection{
				.introLetter{
					width: 1260px;

					.introTitle{
						h1{
							font-size: 67px;
						}
					}

					.introParagraph{
						p{
							font-size: 24px;
						}
					}

					.introQuotes{
						height: 53px;

						h2{
							font-size: 36.6px;
						}
					}
				}
			}

			// Welcome Section
			#section-1{
				#receiverLetter{
					height: 615px;

					.introTitle{
						width: 860px;
						margin-bottom: 26px;

						.maskTitle{
							h1{
								width: 860px;
							}
						}
					}

					.introParagraph{
						margin-bottom: 44.3px;
					}

					#welcomePara-1{
						height: 135px;
					}

					.introQuotes{
						margin-bottom: 38.5px;
					}

					#welcomeQuote-1{
						width: 740px;

						.maskTitle{
							h2{
								width: 740px;
							}
						}
					}

					#welcomeQuote-2{
						width: 640px;

						.maskTitle{
							h2{
								width: 640px;
							}
						}
					}
				}
			}

			// Services Section
			#section-2{
				#servicesLetter{
					height: 650px;

					.introTitle{
						margin-bottom: 28.9px;
					}

					.introParagraph{
						height: 83px;
						margin-bottom: 50px;
					}

					.introQuotes{
						margin-bottom: 40.4px;
					}

					#servicesList{
						th{
							font-size: 23.6px;
							padding-bottom: 28.9px;
						}

						#column-1{
							.maskTitle{
								width: 110px;

								.maskedText{
									width: 110px;
								}
							}
						}
						#column-2{
							.maskTitle{
								width: 100px;

								.maskedText{
									width: 100px;
								}
							}
						}
						#column-3{
							.maskTitle{
								width: 280px;

								.maskedText{
									width: 280px;
								}
							}
						}
						#column-4{
							.maskTitle{
								width: 85px;

								.maskedText{
									width: 85px;
								}
							}
						}
					}
				}
			}

			// Carousel Sections
			.carouselSection{
				.innerCarousel{
					.carouselImages{
						.projectsWrapper{
							.projectData{
								.innerCenteredBox{
									left: 13%;
								}
							}
						}
					}
				}
			}

			// Vertical Carousel
			.carouselVertSection{
				.innerCarousel{
					height: 93%;
				}
			}
		}
	}
}

// Desktop 1920x1080 Resize Intermediate Fix
@media screen and (max-width: 1750px){
	#fullWrapper{
		#mbrtWrapper{
			// Contact Section
			.contactSection{
				.contactLetter{
					height: 360px;
					.topBox{
						.contactTitle{
							h1{
								height: 67px;
								font-size: 58px;
							}
						}
					}

					.bottomBox{
						.contactColumns{
							.indexRow{
								height: 13.5%;

								h5{
									font-size: 31.4px;
								}
							}

							.firstRow{
								.innerHeadRow{
									font-size: 22.7px;
								}

								.innerFootRow{
									font-size: 18.1px;
								}
							}

							.secondRow{
								font-size: 18.1px;
							}
						}
					}
				}
			}

			// Intro Section
			.introSection{
				.introLetter{
					width: 1190px;

					.introTitle{
						height: 93px;

						h1{
							font-size: 63.4px;
							height: 70px;
						}
					}

					.introParagraph{
						p{
							font-size: 22.7px;
						}
					}

					.introQuotes{
						height: 50px;

						h2{
							font-size: 34.6px;
						}
					}
				}
			}

			// Welcome Section
			#section-1{
				#receiverLetter{
					height: 610px;

					.introTitle{
						width: 820px;
						margin-bottom: 24.8px;

						.maskTitle{
							h1{
								width: 820px;
							}
						}
					}

					.introParagraph{
						margin-bottom: 41.9px;
					}

					#welcomePara-1{
						height: 130px;
					}

					.introQuotes{
						margin-bottom: 36.4px;
					}

					#welcomeQuote-1{
						width: 700px;

						.maskTitle{
							h2{
								width: 700px;
							}
						}
					}

					#welcomeQuote-2{
						width: 600px;

						.maskTitle{
							h2{
								width: 600px;
							}
						}
					}
				}
			}

			// Services Section
			#section-2{
				#servicesLetter{
					height: 560px;

					.introTitle{
						margin-bottom: 27.3px;
					}

					.introParagraph{
						height: 80px;
						margin-bottom: 50px;
					}

					.introQuotes{
						margin-bottom: 38.2px;
					}

					#servicesList{
						th{
							font-size: 22.3px;
							padding-bottom: 27.3px;
						}

						
						#column-3{
							.maskTitle{
								width: 260px;

								.maskedText{
									width: 260px;
								}
							}
						}

						td{
							font-size: 8px;
						}
					}
				}
			}

			// Carousel Sections
			.carouselSection{
				.innerCarousel{

					.carouselImages{
						.projectsWrapper{
							.projectData{
								.innerCenteredBox{
									height: 34.5%;
									left: 11%;
								}
							}
						}
					}
				}
			}

			// Vertical Carousel
			.carouselVertSection{
				.innerCarousel{
					height: 89%;
				}
			}
		}
	}
}
/* ... */

